Fix alignment

--- a/src/styles/TextStyles.module.scss
+++ b/src/styles/TextStyles.module.scss
@@ -18,6 +18,7 @@ span {
 .pageStream {
   display: flex;
   flex-flow: column nowrap;
+  align-items: center;
   height: 100%;
   width: 100%;
   > :last-child {
